--- a/cedar-14/build
+++ b/cedar-14/build
@@ -19,4 +19,4 @@ find . -name "*.mdb" -delete
 find mono | xargs strip 2> /dev/null
 rm -rf mono/lib/mono/gac/EntityFramework* mono/lib/mono/gac/System.Web* mono/lib/mono/gac/System.Windows.Forms*
 
-tar -zcf - mono | /gof3r put --md5Check-off -b mono-dependencies -k $STACK/mono-$VERSION.tar.gz
+tar -zcf - mono | /gof3r put --md5Check-off -b nancy-buildpack-mono -k $STACK/mono-$VERSION.tar.gz
